# exrheader-rs

./: .gitmodules  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yaml
lib/exrheader-rs-lib/: Cargo.toml
lib/exrheader-rs-lib/src/: lib.rs
