[workspace]
resolver = "3"
members = ["bin/exrheader-rs", "lib/exrheader-rs-lib"]

[workspace.dependencies]
log = "0.4.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
overflow-checks = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
